@@ -75,4 +75,59 @@ class UtilTest extends \PHPUnit_Framework_TestCase {
         $this->assertNull(Util::parseHTTPDate($time));
 
     }
+
+    /**
+     * @dataProvider negotiateData
+     */
+    function testNegotiate($acceptHeader, $available, $expected) {
+
+        $this->assertEquals(
+            $expected,
+            Util::negotiate($acceptHeader, $available)
+        );
+
+    }
+
+    function negotiateData() {
+
+        return [
+            [ // simple
+                'application/xml',
+                ['application/xml'],
+                'application/xml',
+            ],
+            [ // no header
+                null,
+                ['application/xml'],
+                'application/xml',
+            ],
+            [ // 2 options
+                'application/json',
+                ['application/xml', 'application/json'],
+                'application/json',
+            ],
+            [ // 2 choices
+                'application/json, application/xml',
+                ['application/xml'],
+                'application/xml',
+            ],
+            [ // quality
+                'application/xml;q=0.2, application/json',
+                ['application/xml', 'application/json'],
+                'application/json',
+            ],
+            [ // wildcard
+                'image/jpeg, image/png, */*',
+                ['application/xml', 'application/json'],
+                'application/xml',
+            ],
+            [ // wildcard + quality
+                'image/jpeg, image/png; q=0.5, */*',
+                ['application/xml', 'application/json', 'image/png'],
+                'application/xml',
+            ],
+
+        ];
+
+    }
 }
